--- a/views/pages/proyecto04.pug
+++ b/views/pages/proyecto04.pug
@@ -18,28 +18,28 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-          img(src='assets/images/proyecto/proyecto04.jpg', alt='services-detail-img')
+          img(src='assets/images/servicios/telecomu.jpg', alt='services-detail-img')
           p
-            | GESTIÓN, ELABORACIÓN DE EXPEDIENTE TÉCNICO Y SUMINISTRO E INSTALACIÓN DE LOS SISTEMAS DE UTILIZACIÓN EN MEDIA TENSIÓN Y TENSIÓN DE DISTRIBUCIÓN SECUNDARIA PARA LOS SUMINISTROS ELÉCTRICOS DE LA ESTACIÓN DE BOMBEO EB-1, EB-2, EB-3 Y RESERVORIOS RP-2, 2 RP-3, RP-4 Y RP-5 LOS MISMOS QUE ESTÁN ORIENTADOS A LA ATENCIÓN DE LAS NECESIDADES PARA LA OBRA DEL PROYECTO.
+            | EN TELECOMUNICACIONES TENEMOS UNA AMPLIA VARIEDAD DE SERVICIOS.
 
-          h3 ALCANCE DEL PROYECTO:
+          h3 ALCANCE DE LOS SERVICIOS:
           ul
             li 
-              | Gestión de Factibilidad de Suministro y Fijación de Punto de Diseño, Elaboración del Expediente Técnico y Ejecución de las Obras Relativas al Sistema de Utilización en Media Tensión 10-22.9kV, Trifásico para el Suministro Eléctrico de la Estación de Bombeo EB-1.
+              | Venta e instalación de centrales telefónicas digitales, híbridas e IP.
             li  
-              | Gestión de Factibilidad de Suministro y Fijación de Punto de Diseño, Elaboración del Expediente Técnico y Ejecución de las Obras Relativas al Sistema de Utilización en Media Tensión 10-22.9kV, Trifásico para el Suministro Eléctrico del Reservorio proyectado RP-2 y EB-2.
+              | Venta de terminales telefónicos analógicos, digitales e IP.
 
             li 
-              | Gestión de Factibilidad de Suministro y Fijación de Punto de Diseño, Elaboración del Expediente Técnico y Ejecución de las Obras Relativas al Sistema de Utilización en Media Tensión 10-22.9kV, Trifásico para el Suministro Eléctrico del Reservorio proyectado RP-3 y EB-3.
+              | Cableado telefónico convencional y estructurado. Certificaciones.
 
             li 
-              | Elaboración del Expediente Técnico y Ejecución de Obras Relativas al Sistema de Utilización a Tensión de Distribución Secundaria 380V, Trifásico para el Suministro Eléctrico predio Reservorio Proyectado RP-4.
+              | Venta e instalación de Tarificadores de llamadas. Capacitaciones.
             li 
-              | Elaboración del Expediente Técnico y Ejecución de las Obras Relativas al Sistema de Utilización a Tensión de Distribución Secundaria 380V, Trifásico para el Suministro Eléctrico predio Reservorio RP-5.
+              | Contratos de mantenimiento a plazo fijo e indefinido.
 
             li 
-              | Suministro e Instalación de Subestación Compacta, Grupo Electrógeno y Tablero de Transferencia Automática.
+              | Asesoría en proyectos a la medida de su empresa.
 
             li 
-              |	Instalaciones Eléctricas  Interiores en Sala de Bombas EB-01.
+              |	Proyectos llave en mano.
 
