--- a/views/pages/proyecto08.pug
+++ b/views/pages/proyecto08.pug
@@ -18,22 +18,23 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-          img(src='assets/images/proyecto/proyecto08.jpg', alt='services-detail-img', style='text-align:center')
+          img(src='assets/images/proyecto/redesdatoslan.jpg', alt='services-detail-img', style='text-align:center')
           p
-            | INSTALACIÓN HIDRÁULICA, ELECTROMECÁNICAS, SISTEMA DE CONTROL, MEDICIÓN Y TELEMETRÍA DE LA ESTACIÓN DE BOMBEO EB1 Y LOS RESERVORIOS RP-02 y RP-03 DE LA OBRA DEL PROYECTO.
+            | 
 
           h3 ALCANCE DEL PROYECTO:
           ul
             li 
-              | Verificación y Optimización del diseño del Sistema de Bombeo de la Estación EB-01.
+              | Venta e instalación de terminales de cómputo y servidores de red.
             li  
-              | Elaboración del Expediente Técnico del Sistema de Bombeo que incluye: El diseño de las Bombas, Sistema de Control, Instrumentación, Medición, Árbol de descargas y Telemetría. 
+              | Venta e instalación de switches, firewalls, proxis, enlaces de fibra.
 
             li 
-              | Ejecución de las Obras Relativas al Sistema de Bombeo que comprendía el equipamiento de las Estaciones de Bombeo EB-01 y los Reservorios RP-02 y RP-03.
+              | Venta e instalación de gabinetes y rack de piso y de pared.
 
             li 
-              | Pruebas de operación de las Bombas y Puesta en Marcha del Sistema.
+              | Contratos de mantenimiento a plazo fijo e indefinido.
             li 
-              | Capacitación del personal de mantenimiento y personal encargado.
-
+              | Asesoría en proyectos de redes de datos a la medida de su empresa
+            Li
+              | Proyectos llave en mano.
