--- a/views/pages/proyecto09.pug
+++ b/views/pages/proyecto09.pug
@@ -25,7 +25,14 @@ block view
 
           h3 ALCANCE DEL PROYECTO:
           ul
-            |  Equipos de aire acondicionado de las mejores marcas mundialmente conocidas como LG, CARRIER, LENNOX, YORK, para el hogar, laboratorios, centros de control industriales, oficinas, y salas de servidores.
-            |  sistemas de aire acondicionado que brindan un control fiable, preciso y eficiente de la temperatura, humedad y flujo de aire, especialmente en ambientes de sala de servidores, para un funcionamiento apropiado de los equipos electrónicos críticos. Estos sistemas ofrecen una alta eficiencia energética y control amigable para el usuario.
-
+            li
+            | Venta e instalación de equipamiento completo para sistemas de aire acondicionado, condensadores, evaporadores, ductería, splits decorativos, minisplits.
+            li
+            | Optimización de sistema de aire acondicionados ya existentes en oficinas, edificios e industria.
+            li
+            | Mantenimiento preventivo e integral de equipos de aire acondicionado.
+            li
+            | Contratos de mantenimiento a plazo fijo e indefinido.
+            li
+            | Proyectos llave en mano.
 
