--- a/views/pages/proyecto11.pug
+++ b/views/pages/proyecto11.pug
@@ -22,19 +22,23 @@ block view
           img(src='assets/images/vid.png', alt='services-detail-img', style='text-align:center')
           
           p
-            | INSTALACIÓN HIDRÁULICA, ELECTROMECÁNICAS, SISTEMA DE CONTROL, MEDICIÓN Y TELEMETRÍA DE LA ESTACIÓN DE BOMBEO EB1 Y LOS RESERVORIOS RP-02 y RP-03 DE LA OBRA DEL PROYECTO.
+            | 
 
           h3 ALCANCE DEL PROYECTO:
           ul
             li 
-              | Verificación y Optimización del diseño del Sistema de Bombeo de la Estación EB-01.
+              | Venta e instalación de equipamiento completo para sistemas de video vigilancia, cámaras PTZ analógicas, digitales e IP, unidades DVR, monitores, cableados.
             li  
-              | Elaboración del Expediente Técnico del Sistema de Bombeo que incluye: El diseño de las Bombas, Sistema de Control, Instrumentación, Medición, Árbol de descargas y Telemetría. 
+              | Optimización de sistema de video vigilancia existentes.
 
             li 
-              | Ejecución de las Obras Relativas al Sistema de Bombeo que comprendía el equipamiento de las Estaciones de Bombeo EB-01 y los Reservorios RP-02 y RP-03.
+              | Control de vigilancia local y remota, vía LAN o internet.
 
             li 
-              | Pruebas de operación de las Bombas y Puesta en Marcha del Sistema.
+              | Mantenimiento preventivo e integral de equipos de video vigilancia.
             li 
-              | Capacitación del personal de mantenimiento y personal encargado.
+              | Contratos de mantenimiento a plazo fijo e indefinido.
+            li 
+              | Asesoría técnica profesional.
+            li 
+              | Proyectos llave en mano.   
