--- a/views/pages/solutions-aireacondicionado.pug
+++ b/views/pages/solutions-aireacondicionado.pug
@@ -21,7 +21,7 @@ block view
                 span sistema de aire acondicionado 
   // PAGE CONTENT START
   section.page-content.detail-page
-    .container.page-content-wrapper
+    //.container.page-content-wrapper
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
