--- a/views/pages/solutions-pozotierra.pug
+++ b/views/pages/solutions-pozotierra.pug
@@ -21,16 +21,13 @@ block view
                 span materiales para un sistema puesta tierra 
   // PAGE CONTENT START
   section.page-content.detail-page
-    .container.page-content-wrapper
-      .row
-        .col-sm-10.col-sm-push-1
-          .detail-page-feature
-            img(src='assets/images/materiales.png', alt='services-detail-img')
-            p 
-                | 
-            ul
-                li
-                  img(style='float:left' src='assets/images/materiales.png')
-                  
-                
+             
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino-item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img ",src="assets/images/materiales.png", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title SAMSUNG OfficeServ 7100 
+        p.destinos__item_text  Material de la mejor calidad para la instalacion de un sistema puesta tierra.          
                     
