--- a/views/pages/solutions-teleco.pug
+++ b/views/pages/solutions-teleco.pug
@@ -28,7 +28,7 @@ block view
         .col-sm-10.col-sm-push-1
           .detail-page-feature
             img(src='assets/images/soluciones/videovigilanciaPortada.png', alt='services-detail-img')
-            p 
+           // p 
                 | 
             ul
                 li
@@ -36,7 +36,7 @@ block view
                 li
                     | Diseño, instalaciones y pruebas de sisteas de cableado estructurado para edificaciones.
 
-  .img-rounded.text-white.mb-3
+  //.img-rounded.text-white.mb-3
       .no-gutters.destinos_elegidos.card_mac
        .destino__item.row
         img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/audioconferencia.jpg", alt="")
