--- a/views/pages/proyecto03.pug
+++ b/views/pages/proyecto03.pug
@@ -20,33 +20,31 @@ block view
           
           .detail-page-feature
             img(src='assets/images/servicios/redeselectrica.jpg', alt='services-detail-img')
-          p
-            | INSTALACIÓN HIDRÁULICA Y ELECTROMECÁNICA EN LOS RESERVORIOS RP-1, RP-2, RP-3, RP-4 Y RP-5.
+          p             
+            
 
           h3  ALCANCE DEL PROYECTO:
           ul
             li 
-              | Trazo y replanteo de Obras Electromecánicas (Instalaciones Hidráulicas, Eléctricas e Instrumentación).
+              | Instalaciones de redes de distribución de mediana y baja tensión, de los tipos monofásico y trifásico, para oficinas comerciales e industria.
             li  
-              | Suministro y Montaje Electromecánico de Equipamiento Hidráulico e Instalación de Tableros Eléctricos tales como: Tablero de Distribución, Tableros de Control y Telemetría para el Reservorio RP-1.
+              | Montaje e instalación de cuadros eléctricos de potencia y maniobra, balanceo y análisis de cargas.
 
             li 
-              | Suministro y Montaje Electromecánico de Equipamiento Hidráulico e Instalación de Tableros Eléctricos tales como: Tablero General, Tablero de Distribución, Tableros de Arranque de Bombas, Tablero Banco de Condensadores, Tableros de Control y Telemetría para el Reservorio RP-2.
+              | Instalación de canalizaciones para el cableado, canaletas de PVC y metálicas, tubos de acero.
 
             li 
-              | Suministro y Montaje Electromecánico de Equipamiento Hidráulico e Instalación de Tableros Eléctricos tales como: Tablero General, Tablero de Distribución, Tableros de Arranque de Bombas, Tablero Banco de Condensadores, Tableros de Control y Telemetría para el Reservorio RP-3.
+              | Instalaciones comerciales e industriales de tomas de corriente monofásica y trifásica, con puesta a tierra.
             li 
-              | Suministro y Montaje Electromecánico de Equipamiento Hidráulico e Instalación de Tableros Eléctricos tales como: Tablero de Distribución, Tableros de Control y Telemetría para el Reservorio RP-4.
+              | Instalaciones comerciales e industriales de elementos de Iluminación de interior y exterior. Luces de emergencia.
 
             li 
-              | Suministro y Montaje Electromecánico de Equipamiento Hidráulico e Instalación de Tableros Eléctricos tales como: Tablero de Distribución, Tablero Banco de Condensadores, Tableros de Control y Telemetría para el Reservorio RP-5.
+              | Instalaciones comerciales e industriales de generadores eléctricos y cuadros de conmutación.
 
             li 
-              | Suministro y Montaje Electromecánico de Equipamiento Hidráulico e Instalación de Tableros Eléctricos tales como: Tablero General, Tablero de Distribución, Tablero de Arranque de Bombas, Tablero Banco de Condensadores, Tableros de Control y Telemetría para la Estación de Bombeo EB-02.
+              | Remodelaciones de instalaciones eléctricas existentes de edificios, oficinas y locales industriales, mejoramiento de la eficiencia energética, análisis de cargas.
 
             li
-              | Suministro y Montaje Electromecánico de Equipamiento Hidráulico e Instalación de Tableros Eléctricos tales como: Tablero General, Tablero de Distribución, Tablero de Arranque de Bombas, Tablero Banco de Condensadores, Tableros de Control y Telemetría para la Estación de Bombeo EB-03.
+              | Asesoría en proyectos de redes de distribución a la medida de su empresa.
             li
-              | Suministro e Instalación de Sistema de Alumbrado y Tomacorriente, de acuerdo a la descripción del Proyecto.
-            li
-              | Suministro e Instalación de Instrumentos de medida tales como nivel, presión, caudal, Sensores de Intrusos.  
+              | Proyectos llave en mano.
