--- a/views/pages/proyecto10.pug
+++ b/views/pages/proyecto10.pug
@@ -18,21 +18,22 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-          img(src='assets/images/proyecto/proyecto08.jpg', alt='services-detail-img', style='text-align:center')
+          img(src='assets/images/proyecto/pozoatierra.jpg', alt='services-detail-img', style='text-align:center')
+          img(src='assets/images/servicios/pozotierra.png', alt='services-detail-img', style='text-align:center')
           p
-            | INSTALACIÓN HIDRÁULICA, ELECTROMECÁNICAS, SISTEMA DE CONTROL, MEDICIÓN Y TELEMETRÍA DE LA ESTACIÓN DE BOMBEO EB1 Y LOS RESERVORIOS RP-02 y RP-03 DE LA OBRA DEL PROYECTO.
+            | 
 
           h3 ALCANCE DEL PROYECTO:
           ul
             li 
-              | Verificación y Optimización del diseño del Sistema de Bombeo de la Estación EB-01.
+              | Venta e instalación de insumos completos para una puesta a tierra horizontal y vertical.
             li  
-              | Elaboración del Expediente Técnico del Sistema de Bombeo que incluye: El diseño de las Bombas, Sistema de Control, Instrumentación, Medición, Árbol de descargas y Telemetría. 
+              | Optimización de pozos a tierra ya existentes.
 
             li 
-              | Ejecución de las Obras Relativas al Sistema de Bombeo que comprendía el equipamiento de las Estaciones de Bombeo EB-01 y los Reservorios RP-02 y RP-03.
+              | Mantenimiento preventivo e integral de puestas a tierra.
 
             li 
-              | Pruebas de operación de las Bombas y Puesta en Marcha del Sistema.
+              | Asesoría técnica profesional.
             li 
-              | Capacitación del personal de mantenimiento y personal encargado.
+              | Certificación de puestas a tierra, por Ingeniero colegiado especialista.
