--- a/views/pages/solutions-pozotierra.pug
+++ b/views/pages/solutions-pozotierra.pug
@@ -29,5 +29,5 @@ block view
         .destinos__item__description
         
           h4.destinos__title SAMSUNG OfficeServ 7100 
-        p.destinos__item_text  Material de la mejor calidad para la instalacion de un sistema puesta tierra.          
+        p.destinos__item_text  Sistemas de puesta a tierra ERICO, marca de reconocimiento mundial, que, desde 1992, fabrica insumos de pozos a tierra, únicos en el mundo, con materiales de refuerzo de gran calidad que resuelve los problemas más complicados de puestas a tierra. El GEM 25 es un cemento conductivo que cumple con el Standard IEC 62561-7, permite una fácil instalación, libre de mantenimiento y mantiene al sistema de puesta a tierra con valores de resistividad bajos. Se puede utilizar en cualquier tipo de suelo, sea rocoso, arenoso y cimas de montañas. El GEM es el mejor material para reducir la resistencia a tierra y mantenerla baja en forma permanente.          
                     
