--- a/views/pages/solutions-teleco.pug
+++ b/views/pages/solutions-teleco.pug
@@ -7,7 +7,7 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 EQUIPOS DE AUDIOCONFERENCIA
+            .h4 EQUIPOS DE ADICIONALES
             ul
               li
                 a(href='index.html') Servicios y
@@ -18,7 +18,7 @@ block view
               li
                 span 
               li
-                span equipos de audioconferencia
+                span en telefonia.
 
                 
   // PAGE CONTENT START
@@ -39,5 +39,35 @@ block view
           h4.destinos__title POLYCOM
         p.destinos__item_text Equipos de última generación de la marca POLYCOM, para salas de conferencia pequeñas y medianas, rendimiento y calidad de voz excepcionales para que sus llamadas de conferencia sean más claras y productivas, sin cortes ni pérdida de señal.
                               
+
+  .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/vin.jpg", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title PLANTRONICS 
+        p.destinos__item_text Pone a su disposición, una amplia variedad de vinchas y headsets para usuarios telefónicos y Call Center, experimente la libertad, la comodidad y la magnífica calidad de sonido. Aumente su productividad en el trabajo al realizar otras tareas mientras habla por teléfono. Son compatibles con muchas marcas de teléfonos, sean estos analógicos, digitales e IP.
+
+  .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/tarificadoresVista.png", alt="")
+ 
+        .destinos__item__description
+        
+          h4.destinos__title  CONTROL PBX 
+        p.destinos__item_text El mejor tarificador de llamadas del mercado nacional, es una herramienta importante de administración eficiente de los recursos de su empresa, permitiendo un ahorro efectivo en el aspecto de llamadas telefónicas. Es compatible con todas las marcas de centrales telefónicas existentes en el mercado nacional y mundial. Le brinda a Ud. una plataforma totalmente amigable, así como reportes visuales, de acuerdo a sus requerimientos.
+
+  .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/cableadoestruturado.jpg", alt="")
+ 
+        .destinos__item__description
+        
+          h4.destinos__title  CABLES Y ACCESORIOS
+        p.destinos__item_text Cables telefónicos de las marcas INDECO y AMP, para cableado convencional de telefonía, cablea de 2, 4, 6, 12, 25, 50 y 100 pares, para interiores y exteriores. Cable UTP de la marca AMP, categorías 5E, 6 y 6A para cableado estructurado de voz y datos; así como, de accesorios para una completa instalación de soluciones de cableado de red. Cables eléctricos de la marca INDECO, para sus necesidades de alimentación eléctrica, se dispone de varios calibres, acordes con el consumo eléctrico de su oficina; así como de una amplia gama de accesorios para una completa instalación de soluciones de cableado eléctrico para su oficina.
+
 
 
