--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -5,29 +5,37 @@ footer
       .col-lg-3.col-md-3.col-sm-6.footer-left.col-footer
         a.footer-logo(href='index.html')
           img(src='assets/images/mini_mundoOriginal.png', falt='logo-img')
-          h3.color-text-logo COMUNICACIONES
-        div
-          | Nuestras Redes sociales:
+        ul
+          li(style="color:#FFF")
+            |Redes Sociales: 
+            a(href='https://www.facebook.com/ryfcomunicacionesperu')
+              i.fa.fa-facebook
+          li
+            a(href='https://www.linkedin.com/in/william-ram%C3%B3n-chinchay-84933a31/')
+              i.fa.fa-linkedin
         ul
           li
             a(href='#')
-              i.fa.fa-facebook
+              i.fa.fa-whatsapp
+          li
+            p(style="color:#FFF") (+51) 991224300
+        ul
           li
             a(href='#')
-              i.fa.fa-linkedin
-          
-       
-         
-      .col-lg-3.col-md-3.col-sm-6.footer-left.col-footer
+              i.fa.fa-phone
+          li
+            p(style="color:#FFF") (01) 5097400 
+        
+        
+      .col-lg-4.col-md-4.col-sm-6.footer-left.col-footer
        
         div
           |R&F Comunicaciones es una Empresa Peruana fundada en el año 2010, está conformada por personal altamente especializado en las áreas de telecomunicaciones, redes de distribución eléctrica, cableado eléctrico, telefónico y estructurado, pozos a tierra, sistemas de aire acondicionado y sistemas de video vigilancia.
           |nos dedicamos a la asesoría, suministros, servicios y proyectos integrales para la pequeña, mediana y gran empresa.
-          |Su amplia oferta incluye servicios especializados con valor agregado como consultoría, suministro de equipamiento de última generación, integración, desarrollo e implementación de soluciones, servicio técnico y soporte post-venta.
-
+        
     
     
-      .col-lg-3.col-md-3.col-sm-6.col-footer.footer-nav.first-nav
+      .col-lg-2.col-md-2.col-sm-6.col-footer.footer-nav.first-nav
         .h3 Enlaces Adicionales
         ul
           li
