--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -20,15 +20,15 @@ section.top-bar
       .col-lg-6.col-md-6.col-sm-6.col-xs-12.left-side
         ul
           li
-            a(href='#') Contacto: (01) 4852027    |   ventas@ryfcomunicaciones.com
+            a(href='#') Contacto: (01) 5097400    |   ventas@ryfcomunicaciones.com
 
       .col-lg-6.col-md-6.col-sm-6.col-xs-12.right-side
         ul
           li
-            a(href='#')
+            a(href='https://www.facebook.com/ryfcomunicacionesperu')
               i.fa.fa-facebook
           li
-            a(href='#')
+            a(href='https://www.linkedin.com/in/william-ram%C3%B3n-chinchay-84933a31/')
               i.fa.fa-linkedin
          
 // TOP BAR END
@@ -132,13 +132,11 @@ header
                   li
                     a(href='solutions-electricitycp') CENTRALES TELEFONICAS
                     a(href='solutions-controlcp') EQUIPOS TELEFONICOS DIGITALES/IP
-                    a(href='solutions-telecocp') EQUIPOS DE AUDIOCONFERENCIA
-                    a(href='solutions-saneacp') VINCHAS Y HEADSETS
-                    a(href='solutions-tarificadorescp') TARIFICADORES DE LLAMADA
+                    a(href='solutions-telecocp') EQUIPOS ADICIONALES DE TELEFONIA
                     a(href='solutions-pozotierracp') MATERIALES PARA PUESTA TIERRA
                     a(href='solutions-aireacondicionadocp') SISTEMAS DE AIRE ACONDICIONADO
                     a(href='solutions-videovigilanciacp') SISTEMAS DE VIDIO VIGILANCIA Y VOZ SOBRE IP
-                    a(href='solutions-accesorioscp') CABLES Y ACCESORIOS
+
             li.wrap
               a.btn-7(href='#')
                 span
