--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -61,7 +61,7 @@ block view
                                 span
                                   span Ver mas
                 .n2-ss-slide.n2-ss-canvas.n2-ow.n2-ss-slide-44(data-slide-duration='0', data-id='44', style='')
-                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/tecno3.jpg', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
+                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/slide-3.jpg', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
                     .n2-ss-slide-background-mask(style='')
                       img(title='', src='assets/slider/images/slide-3.jpg', alt='')
                   .n2-ss-layers-container.n2-ow(data-csstextalign='center', style='')
@@ -322,7 +322,7 @@ block view
   // End all features website here
   // SERVICES SECTION START
   section#services.section-wrapper.gray-background
-    .container
+    .container(id='sectorservicio')
       .row
         .col-lg-12.heding-wrapper.text-center.scale-less.animate-in
           span SERVICIOS
@@ -401,7 +401,89 @@ block view
                     .title CAPACITACIONES
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
                     a.btn.transparent.mt20(href='proyectocp12') Ves Mas
+    
+    //seccion de producto
+    section#services.section-wrapper.gray-background
+    .container(id='sectorproducto')
+      .row
+        .col-lg-12.heding-wrapper.text-center.scale-less.animate-in
+          span PRODUCTOS
+          h2 NUESTROS PRODUCTOS
+          span.spliter
+      ul.row.services-container
+        li.col-lg-4.col-md-4.col-sm-6.col-xs-12
+          figure.imghvr-shutter-out-horiz
+            img.img-responsive(src='assets/images/omnipcx.jpg', alt='service1')
+            figcaption.info
+              .table
+                .table-row
+                  .table-cell.text-center.align-middle
+                    .subtitle
+                    .title CENTRALES TELEFONICAS
+                    .description Contamos con las mejores marcas de productos en centrales telefonicas.
+                    a.btn.transparent.mt20(href='proyectocp03') Ves Mas
+        li.col-lg-4.col-md-4.col-sm-6.col-xs-12
+          figure.imghvr-shutter-out-horiz
+            img.img-responsive(src='assets/images/27882.jpg', alt='service3')
+            figcaption.info
+              .table
+                .table-row
+                  .table-cell.text-center.align-middle
+                    .subtitle 
+                    .title EQUIPOS TELEFONICOS DIGITALES/IP
+                    .description Una gran variedad de equipos telefonicos de la mejor calidad y las mejores marcas a tu servicio.
+                    a.btn.transparent.mt20(href='proyectocp04') Ves Mas
+        li.col-lg-4.col-md-4.col-sm-6.col-xs-12
+          figure.imghvr-shutter-out-horiz
+            img.img-responsive(src='assets/images/redes3.jpg', alt='service4')
+            figcaption.info
+              .table
+                .table-row
+                  .table-cell.text-center.align-middle
+                    .subtitle 
+                    .title SISTEMA DE AIRE ACONDICIONADO
+                    .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    a.btn.transparent.mt20(href='proyectocp09') Ves Mas
         
+        
+        
+
+        li.col-lg-4.col-md-4.col-sm-6.col-xs-12
+          figure.imghvr-shutter-out-horiz
+            img.img-responsive(src='assets/images/redes4.jpg', alt='service2')
+            figcaption.info
+              .table
+                .table-row
+                  .table-cell.text-center.align-middle
+                    .subtitle
+                    .title SISTEMA PUESTA A TIERRA.
+                    .description Instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    a.btn.transparent.mt20(href='proyectocp10') Ves Mas
+               
+        li.col-lg-4.col-md-4.col-sm-6.col-xs-12
+          figure.imghvr-shutter-out-horiz
+            img.img-responsive(src='assets/images/proyecto/videovigilancia.jpg', alt='service4')
+            figcaption.info
+              .table
+                .table-row
+                  .table-cell.text-center.align-middle
+                    .subtitle 
+                    .title SISTEMA DE VIDEO VIGILANCIA
+                    .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    a.btn.transparent.mt20(href='proyectocp11') Ves Mas
+        
+        li.col-lg-4.col-md-4.col-sm-6.col-xs-12
+          figure.imghvr-shutter-out-horiz
+            img.img-responsive(src='assets/images/servicios/capacita.jpg', alt='service4')
+            figcaption.info
+              .table
+                .table-row
+                  .table-cell.text-center.align-middle
+                    .subtitle 
+                    .title CAPACITACIONES
+                    .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    a.btn.transparent.mt20(href='proyectocp12') Ves Mas
+            
 
                     
  
