--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -123,7 +123,7 @@ header
               a.btn-7(href='team')
                 span NUESTROS CLIENTES
             li.wrap
-              a.btn-7(href='#')
+              a.btn-7(href='index#sectorproducto')
                 span
                   | PRODUCTOS
                   i.fa.fa-caret-down(aria-hidden='true')
@@ -140,7 +140,7 @@ header
                     a(href='solutions-videovigilanciacp') SISTEMAS DE VIDIO VIGILANCIA Y VOZ SOBRE IP
                     a(href='solutions-accesorioscp') CABLES Y ACCESORIOS
             li.wrap
-              a.btn-7(href='#')
+              a.btn-7(href='index#sectorservicio')
                 span
                   | SERVICIOS
                   i.fa.fa-caret-down(aria-hidden='true')
