--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -435,14 +435,14 @@ block view
                     a.btn.transparent.mt20(href='proyectocp04') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/redes3.jpg', alt='service4')
+            img.img-responsive(src='assets/images/productpolycom.jpg', alt='service4')
             figcaption.info
               .table
                 .table-row
                   .table-cell.text-center.align-middle
                     .subtitle 
-                    .title SISTEMA DE AIRE ACONDICIONADO
-                    .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    .title EQUIPOS ADICIONALES DE TELEFONIA
+                    .description Contamos con equipos para sala conferencia, vinchas y headsets, tarificadores y cableado estructurado.
                     a.btn.transparent.mt20(href='proyectocp09') Ves Mas
         
         
@@ -450,38 +450,38 @@ block view
 
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/redes4.jpg', alt='service2')
+            img.img-responsive(src='assets/images/productpuestatierra.jpg', alt='service2')
             figcaption.info
               .table
                 .table-row
                   .table-cell.text-center.align-middle
                     .subtitle
-                    .title SISTEMA PUESTA A TIERRA.
-                    .description Instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    .title PRODUCTOS PARA SISTEMA PUESTA TIERRA.
+                    .description Contamos con equipos y materiales para la correcta proteccion de sus equipos electronicos.
                     a.btn.transparent.mt20(href='proyectocp10') Ves Mas
                
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/proyecto/videovigilancia.jpg', alt='service4')
+            img.img-responsive(src='assets/images/productairecondicionado.png', alt='service4')
             figcaption.info
               .table
                 .table-row
                   .table-cell.text-center.align-middle
                     .subtitle 
-                    .title SISTEMA DE VIDEO VIGILANCIA
-                    .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    .title SISTEMA DE AIRE ACONDICIONADO
+                    .description Para el hogar, laboratorios, centros de control industriales, oficinas, y salas de servidores.
                     a.btn.transparent.mt20(href='proyectocp11') Ves Mas
         
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/servicios/capacita.jpg', alt='service4')
+            img.img-responsive(src='assets/images/productvideovigi.png', alt='service4')
             figcaption.info
               .table
                 .table-row
                   .table-cell.text-center.align-middle
                     .subtitle 
-                    .title CAPACITACIONES
-                    .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    .title PRODUCTOS DE VIDEO VIGILANCIA
+                    .description VIgile su inversion en todos sus locales de manera remota con nuestros equipos de la mejor calidad.
                     a.btn.transparent.mt20(href='proyectocp12') Ves Mas
             
 
