cambios de servicios

--- a/views/pages/proyecto03.pug
+++ b/views/pages/proyecto03.pug
@@ -19,11 +19,11 @@ block view
         .col-sm-10.col-sm-push-1
           
           .detail-page-feature
-            img(src='assets/images/servicios/redeselectrica.jpg', alt='services-detail-img')
+            img(src='assets/images/servicios/tableroelectrico.jpg', alt='services-detail-img')
           p             
             
 
-          h3  ALCANCE DEL PROYECTO:
+          h3  ALCANCES:
           ul
             li 
               | Instalaciones de redes de distribución de mediana y baja tensión, de los tipos monofásico y trifásico, para oficinas comerciales e industria.
