--- a/views/pages/proyecto04.pug
+++ b/views/pages/proyecto04.pug
@@ -18,11 +18,11 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-          img(src='assets/images/servicios/telecomu.jpg', alt='services-detail-img')
-          p
+          img(src='assets/images/servicios/teleco.jpg', alt='services-detail-img')
+          hr
+          h3
             | EN TELECOMUNICACIONES TENEMOS UNA AMPLIA VARIEDAD DE SERVICIOS.
 
-          h3 ALCANCE DE LOS SERVICIOS:
           ul
             li 
               | Venta e instalación de centrales telefónicas digitales, híbridas e IP.
@@ -43,3 +43,18 @@ block view
             li 
               |	Proyectos llave en mano.
 
+          h4 
+            | Redes de datos - LAN
+
+
+          ul
+            li 
+              | Venta e instalación de terminales de cómputo y servidores de red.
+            li  
+              | Venta e instalación de switches, firewalls, proxis, enlaces de fibra.
+
+            li 
+              | Venta e instalación de gabinetes y rack de piso y de pared.
+
+            li 
+              | Contratos de mantenimiento a plazo fijo e indefinido.
