--- a/views/pages/proyecto09.pug
+++ b/views/pages/proyecto09.pug
@@ -18,21 +18,15 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-          img(src='assets/images/servicios/aireacon.jpg', alt='services-detail-img', style='center')
-          img(src='assets/images/proyecto/aireacondicionado.jpg', alt='services-detail-img', style='center')
-          p
+          img(src='assets/images/servicios/aireacondi.jpg', alt='services-detail-img', style='center')
+          
+          h3
             | EMPRESA CAPACITA ALA IMPLEMENTACION I/O MATENIMIENTO DE SISTEMAS DE AIRE ACONDICIONADO.
 
-          h3 ALCANCE DEL PROYECTO:
           ul
-            li
-            | Venta e instalación de equipamiento completo para sistemas de aire acondicionado, condensadores, evaporadores, ductería, splits decorativos, minisplits.
-            li
-            | Optimización de sistema de aire acondicionados ya existentes en oficinas, edificios e industria.
-            li
-            | Mantenimiento preventivo e integral de equipos de aire acondicionado.
-            li
-            | Contratos de mantenimiento a plazo fijo e indefinido.
-            li
-            | Proyectos llave en mano.
+            li Venta e instalación de equipamiento completo para sistemas de aire acondicionado, condensadores, evaporadores, ductería, splits decorativos, minisplits.
+            li Optimización de sistema de aire acondicionados ya existentes en oficinas, edificios e industria.
+            li Mantenimiento preventivo e integral de equipos de aire acondicionado.
+            li Contratos de mantenimiento a plazo fijo e indefinido.
+            li Proyectos llave en mano.
 
