--- a/views/pages/proyecto11.pug
+++ b/views/pages/proyecto11.pug
@@ -10,7 +10,7 @@ block view
             .h4 VIDEO VIGILANCIA
             ul
               li
-                a(href='index.html') AMPLIACIÓN Y MEJORAMIENTO DEL SISTEMA DE AGUA POTABLE Y ALCANTARILLADO DEL DISTRITO DE PILLCOMARCA – HUÁNUCO.
+                a(href='index.html') INSTALACION DE CAMARAS IP Y ANALOGICAS CCTV EN INTERIORES Y EXTERIORES.
           
   // PAGE CONTENT START
   section.page-content.detail-page
@@ -18,8 +18,8 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-          img(src='assets/images/servicios/videovigi.jpg', alt='services-detail-img', style='text-align:center')
-          img(src='assets/images/vid.jpg', alt='services-detail-img', style='text-align:center')
+          img(src='assets/images/servicios/cctv.jpg', alt='services-detail-img', style='text-align:center')
+
           
           p
             | 
