--- a/views/pages/proyecto10.pug
+++ b/views/pages/proyecto10.pug
@@ -10,7 +10,7 @@ block view
             .h4 PUESTA A TIERRA
             ul
               li
-                a(href='solutions-pozotierracp') Instalacion,capacitacion y venta materiales.
+                a(href='solutions-pozotierracp') Instalacion de pozos a tierra para la proteccion de equipos.
           
   // PAGE CONTENT START
   section.page-content.detail-page
@@ -18,8 +18,7 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-          img(src='assets/images/proyecto/pozoatierra.jpg', alt='services-detail-img', style='text-align:center')
-          img(src='assets/images/servicios/pozotierra.jpg', alt='services-detail-img', style='text-align:center')
+          img(src='assets/images/servicios/tierra2.jpg', alt='services-detail-img', style='text-align:center')
           p
             | 
 
