--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -421,7 +421,7 @@ block view
                     .subtitle
                     .title CENTRALES TELEFONICAS
                     .description Contamos con las mejores marcas de productos en centrales telefonicas.
-                    a.btn.transparent.mt20(href='proyectocp03') Ves Mas
+                    a.btn.transparent.mt20(href='solutions-electricitycp') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
             img.img-responsive(src='assets/images/27882.jpg', alt='service3')
@@ -432,7 +432,7 @@ block view
                     .subtitle 
                     .title EQUIPOS TELEFONICOS DIGITALES/IP
                     .description Una gran variedad de equipos telefonicos de la mejor calidad y las mejores marcas a tu servicio.
-                    a.btn.transparent.mt20(href='proyectocp04') Ves Mas
+                    a.btn.transparent.mt20(href='solutions-controlcp') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
             img.img-responsive(src='assets/images/productpolycom.jpg', alt='service4')
@@ -443,7 +443,7 @@ block view
                     .subtitle 
                     .title EQUIPOS ADICIONALES DE TELEFONIA
                     .description Contamos con equipos para sala conferencia, vinchas y headsets, tarificadores y cableado estructurado.
-                    a.btn.transparent.mt20(href='proyectocp09') Ves Mas
+                    a.btn.transparent.mt20(href='solutions-telecocp') Ves Mas
         
         
         
@@ -458,7 +458,7 @@ block view
                     .subtitle
                     .title PRODUCTOS PARA SISTEMA PUESTA TIERRA.
                     .description Contamos con equipos y materiales para la correcta proteccion de sus equipos electronicos.
-                    a.btn.transparent.mt20(href='proyectocp10') Ves Mas
+                    a.btn.transparent.mt20(href='solutions-pozotierracp') Ves Mas
                
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
@@ -470,7 +470,7 @@ block view
                     .subtitle 
                     .title SISTEMA DE AIRE ACONDICIONADO
                     .description Para el hogar, laboratorios, centros de control industriales, oficinas, y salas de servidores.
-                    a.btn.transparent.mt20(href='proyectocp11') Ves Mas
+                    a.btn.transparent.mt20(href='solutions-aireacondicionadocp') Ves Mas
         
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
@@ -482,7 +482,7 @@ block view
                     .subtitle 
                     .title PRODUCTOS DE VIDEO VIGILANCIA
                     .description VIgile su inversion en todos sus locales de manera remota con nuestros equipos de la mejor calidad.
-                    a.btn.transparent.mt20(href='proyectocp12') Ves Mas
+                    a.btn.transparent.mt20(href='solutions-videovigilanciacp') Ves Mas
             
 
                     
